Fix alignment in ie

--- a/resources/assets/less/bem/profile-header.less
+++ b/resources/assets/less/bem/profile-header.less
@@ -67,7 +67,7 @@
     margin: 0 10px;
 
     &--info {
-      flex: 1;
+      flex: 1 0 auto;
       display: flex;
       align-items: flex-start;
       flex-direction: column;
